--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,7 @@ modules.order
 !.gitattributes
 !.gitignore
 !.mailmap
+!.circleci
 
 #
 # Generated include files
@@ -152,3 +153,4 @@ arch/*/configs/vendor/*_defconfig
 
 # build zips
 *.zip
+regen.sh
