Build v0.0.0.2 	modified:   .circleci/build.sh 	modified:   arch/arm64/boot/dts/vendor/bindings/cpufreq/cpufreq-qcom-hw.txt 	modified:   arch/arm64/boot/dts/vendor/qcom/yupik.dtsi 	modified:   arch/arm64/configs/lisa_defconfig 	modified:   include/linux/sched/cpufreq.h

--- a/arch/arm64/configs/lisa_defconfig
+++ b/arch/arm64/configs/lisa_defconfig
@@ -373,11 +373,7 @@ CONFIG_PRIME_CPU_MASK=128
 CONFIG_HOTPLUG_CPU=y
 # CONFIG_NUMA is not set
 CONFIG_HOLES_IN_ZONE=y
-# CONFIG_HZ_100 is not set
-CONFIG_HZ_250=y
-# CONFIG_HZ_300 is not set
-# CONFIG_HZ_1000 is not set
-CONFIG_HZ=250
+CONFIG_HZ=100
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
@@ -988,7 +984,7 @@ CONFIG_INET_TCP_DIAG=y
 CONFIG_INET_UDP_DIAG=y
 # CONFIG_INET_RAW_DIAG is not set
 CONFIG_INET_DIAG_DESTROY=y
-# CONFIG_TCP_CONG_ADVANCED is not set
+CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_TCP_MD5SIG is not set
