--- a/arch/arm64/configs/lisa_defconfig
+++ b/arch/arm64/configs/lisa_defconfig
@@ -985,10 +985,10 @@ CONFIG_INET_UDP_DIAG=y
 # CONFIG_INET_RAW_DIAG is not set
 CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
-CONFIG_TCP_CONG_BIC=n
+# CONFIG_TCP_CONG_BIC is not set
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=y
-CONFIG_TCP_CONG_HTCP=n
+# CONFIG_TCP_CONG_HTCP is not set
 # CONFIG_TCP_CONG_HSTCP is not set
 # CONFIG_TCP_CONG_HYBLA is not set
 # CONFIG_TCP_CONG_VEGAS is not set
@@ -1002,6 +1002,9 @@ CONFIG_TCP_CONG_HTCP=n
 CONFIG_TCP_CONG_CDG=y
 CONFIG_TCP_CONG_BBR=y
 CONFIG_DEFAULT_CUBIC=y
+# CONFIG_DEFAULT_WESTWOOD is not set
+# CONFIG_DEFAULT_CDG is not set
+# CONFIG_DEFAULT_BBR is not set
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_TCP_MD5SIG is not set
