--- a/arch/arm64/configs/lisa_defconfig
+++ b/arch/arm64/configs/lisa_defconfig
@@ -373,7 +373,7 @@ CONFIG_PRIME_CPU_MASK=128
 CONFIG_HOTPLUG_CPU=y
 # CONFIG_NUMA is not set
 CONFIG_HOLES_IN_ZONE=y
-CONFIG_HZ=100
+CONFIG_HZ=500
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
@@ -546,6 +546,9 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 #
 # CPU frequency scaling drivers
 #
+CONFIG_CPUFREQ_MINFREQ_LITTLE=691200
+CONFIG_CPUFREQ_MINFREQ_BIG=691200
+CONFIG_CPUFREQ_MINFREQ_PRIME=806400
 # CONFIG_CPUFREQ_DT is not set
 # CONFIG_CPUFREQ_DUMMY is not set
 CONFIG_ARM_SCPI_CPUFREQ=y
